[tool.poetry]
name = "propos-backend"
version = "0.1.0"
description = "PropOS Backend API"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
pydantic = {extras = ["email"], version = "^2.9"}
pydantic-settings = "^2.6"
supabase = "^2.10"
python-dotenv = "^1.0"
structlog = "^24.4"
pywebpush = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
factory-boy = "^3.3"
httpx = "^0.27"
respx = "^0.21"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
