[tool.poetry]
name = "propos-backend"
version = "0.1.0"
description = "PropOS Backend API"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
pydantic = {extras = ["email"], version = "^2.9"}
pydantic-settings = "^2.6"
supabase = "^2.10"
python-dotenv = "^1.0"
structlog = "^24.4"
pywebpush = "^2.0"
pypdf = "^5.0"
python-multipart = "^0.0.12"
openai = "^1.50"
anthropic = "^0.39"
httpx = "^0.27"
sqlglot = "^25.0"
rapidfuzz = "^3.10"
psycopg = {extras = ["binary"], version = "^3.2"}
pypdfium2 = "^5.8.0"
pillow = "^12.2.0"
pillow-heif = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
factory-boy = "^3.3"
httpx = "^0.27"
respx = "^0.21"
ruff = "^0.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70 -m 'not integration'"
markers = [
    "integration: hits real Supabase + LLM providers (slow, costs tokens)",
    "whisper: hits Groq Whisper (rate-limited 20 req/min, only run when measuring STT quality)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
